tests/pending/pos/t9844.scala
trait X[T <: X[T]] { self: T => }
object Y extends X[Y.type]
