tests/pending/neg/i7820.scala
object A { type F[X >: F, Y] }
